# bebebendle

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  drizzle.config.ts  package.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/admin/: page.tsx
app/components/: CountdownTimer.tsx  DailyPlayButton.tsx  ShareButton.tsx
app/daily/: page.tsx
app/lib/: cookies.ts
app/scrandle/: page.tsx
bot/: .dockerignore  Dockerfile  README.md  pyproject.toml
bot/src/: __init__.py  database.py  main.py
db/: bebendle.sqlite  schema.ts
db/migrations/: 0000_absent_sunset_bain.sql  0001_remove_connection_tests_add_scrans.sql  0002_add_approved_field.sql  0003_add_scrandle_tables.sql  0004_add_daily_user_results.sql  0005_add_telegram_id_to_scrans.sql  0005_add_telegram_votes.sql
next/: Dockerfile  eslint.config.mjs  package.json  vitest.config.ts
next/app/: error.tsx  globals.css  layout.tsx  page.tsx  template.tsx
next/components/: answer-indicators.tsx  average-score-display.tsx  countdown-timer.tsx  daily-play-button.tsx  game-actions.tsx  score-display.tsx  share-button.tsx  social-links.tsx
next/db/: schema.ts
next/hooks/: use-admin-auth.ts  use-admin-pagination.ts  use-admin-sorting.ts  use-admin.ts  use-daily-data.ts  use-daily-game.ts  use-image-preloader.ts  use-scran-mutations.ts  use-scrans-data.ts  use-transition-state.ts  use-vote-submission.ts
next/lib/: scoring.ts  (+2 more)
public/: site.webmanifest
scripts/: migrate-data.ts  migrate-images.ts  seed-scrans.ts  update-images.ts
(+65 files in other folders)
