[project]
name = "bebebendle-bot"
version = "0.1.0"
description = "Telegram bot for bebebendle - daily food comparison game"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
